[package]
name = "server"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "server"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
git2 = { workspace = true }
listenfd = { workspace = true }
partial_struct = { workspace = true }
percent-encoding = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
struct-patch = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors"]}
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
dirs = { workspace = true }
ignore = { workspace = true }
grep-regex = { workspace = true }
grep-searcher = { workspace = true }
grep-matcher = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

